<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FF13233F"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/livepusher_screen_tv_generate_play_url_success"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:text="@string/livepusher_screen_tv_use_another_phone_to_play"
            android:textColor="#FF6B82A8"
            android:textSize="12sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/livepusher_iv_qr_code"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:padding="4dp" />

    <LinearLayout
        android:id="@+id/livepusher_ll_copy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="@drawable/livepusher_screen_ic_copy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/livepusher_screen_tv_copy_the_play_url"
            android:textColor="#FF6B82A8"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#FF6B82A8" />

    <Button
        android:id="@+id/livepusher_btn_close"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FF13233F"
        android:text="@string/livepusher_screen_btn_close"
        android:textColor="#FF0062E3"
        android:textSize="16sp" />

</LinearLayout>
